change SQLite to vercel postgres for production

--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-DATABASE_URL="file:./dev.db"
+POSTGRES_URL="postgres://default:ApoGevSsnr64@ep-snowy-river-a424wc7h-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:ApoGevSsnr64@ep-snowy-river-a424wc7h-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:ApoGevSsnr64@ep-snowy-river-a424wc7h-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:ApoGevSsnr64@ep-snowy-river-a424wc7h.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-snowy-river-a424wc7h-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="ApoGevSsnr64"
+POSTGRES_DATABASE="verceldb"
 
 AUTH_SECRET="hOcuF9bemaF6ES3+5g/dumBmn0hm7oszm6r+d3fDZuc="
 
